# MediaKeys

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  config.mediakeys
Installer/: Installer.nsi
MediaConfig/: CMakeLists.txt  mediaconfig.cxx
include/: linux.h  mediakeys.h  stdafx.h  win.h
src/: linux.c  mediakeys.c  win.c
